added separate file for navbar

--- a/templates/base.layout.html
+++ b/templates/base.layout.html
@@ -15,7 +15,12 @@
 
         {{end}}
     </head>
-    <body>
+<body>
+            
+    {{block "navbar" .}}
+
+    {{end}}
+
 
     {{block "content" .}}
 
@@ -26,6 +31,6 @@
 
     {{end}}
 
-    </body>
-    </html>
+</body>
+</html>
 {{end}}
