--- a/templates/home.page.html
+++ b/templates/home.page.html
@@ -1,13 +1,74 @@
 {{template "base" .}}
 
 {{define "content"}}
+
+<!-- Carousel -->
+<div id="carousel-main" class="carousel slide" data-bs-ride="carousel">
+    
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carousel-main" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carousel-main" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carousel-main" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+
+    <div class="carousel-inner" style=" width:100%;max-height: 600px !important;">
+      <div class="carousel-item active">
+        <img src="static/images/outside.png" class="d-block w-100 h-25" alt="...">
+        <div class="carousel-caption d-none d-sm-block">
+            <h5>First slide label</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="static/images/tray.png" class="d-block w-100 h-25" alt="...">
+        <div class="carousel-caption d-none d-sm-block">
+            <h5>First slide label</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="static/images/woman-laptop.png" class="d-block w-100 h-25" alt="...">
+        <div class="carousel-caption d-none d-sm-block">
+            <h5>First slide label</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carousel-main" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carousel-main" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+  <!-- END Carousel -->
+
+  <!-- Description -->    
     <div class="container">
-        <div class="row">
-            <div class="col">
-                <h1>This is the home page</h1>
-                <p>This is some text</p>
-                <img src="/static/images/temp.jpg" height="500" width="400">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-12">
+                
+                <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 mt-3 display-6 text-center"><strong>Welcome to Roomifyr!
+                    </strong></h4>
+                <p class="mbr-text mbr-fonts-style display-7">Lorem
+                    ipsum dolor sit amet, consectetur adipiscing elit. Cras sem risus, consectetur eget sagittis ut,
+                    tincidunt vitae magna. Pellentesque varius porta sem et ullamcorper. Curabitur ultricies consectetur
+                    hendrerit. Ut pulvinar sit amet lacus tincidunt iaculis. Morbi molestie, tortor quis ultricies
+                    sodales, tellus ipsum pretium sem, eget euismod nunc augue non diam. In vel tempor turpis. Quisque
+                    gravida arcu neque, sed sagittis purus sollicitudin et. <br><br>Proin sagittis felis vel consequat
+                    euismod. Nam at finibus dolor. Sed at dictum sem. Donec mollis, purus eu venenatis mollis, risus
+                    nulla suscipit turpis, nec venenatis velit lorem et dolor. Sed posuere felis a sem interdum luctus.
+                    Proin nec orci augue. Vestibulum ultrices leo non erat scelerisque mollis.</p>
             </div>
         </div>
     </div>
+  <!--END Description -->
+
+{{end}}
+
+{{define "js"}}
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
 {{end}}
