--- a/templates/navbar.layout.html
+++ b/templates/navbar.layout.html
@@ -2,7 +2,7 @@
 
 {{define "navbar"}}
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" data-bs-theme="dark">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark" data-bs-theme="dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">Roomifyr</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -16,8 +16,17 @@
           <li class="nav-item">
             <a class="nav-link" href="/about">About</a>
           </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="/rooms" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Rooms
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="/rooms/generals-quarters">General's Quarters</a></li>
+              <li><a class="dropdown-item" href="/rooms/majors-suite">Major's Suite</a></li>
+            </ul>
+          </li>
           <li class="nav-item">
-            <a class="nav-link" href="/rooms">Rooms</a>
+            <a class="nav-link" href="/make-reservation">Book Now</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/contact">Contact</a>
@@ -27,4 +36,42 @@
     </div>
   </nav>
 
+{{end}}
+
+{{define "css"}}
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
+{{end}}
+
+{{define "footer"}}
+<!-- Footer -->
+<!-- Remove the container if you want to extend the Footer to full width. -->
+  <footer class="bg-dark text-center text-white">
+  <!-- Grid container -->
+  <div class="container p-2 pb-0">
+    <!-- Section: Social media -->
+    <section class="mb-2">
+      <!-- Facebook -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#" role="button"><i class="fab fa-facebook-f fa-1x"></i></a>
+
+      <!-- Twitter -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#" role="button"><i class="fab fa-twitter fa-1x"></i></a>
+
+      <!-- Google -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#" role="button"><i class="fab fa-google fa-1x"></i></a>
+
+      <!-- Instagram -->
+      <a class="btn btn-outline-light btn-floating m-1" href="#" role="button"><i class="fab fa-instagram fa-1x"></i></a>
+    </section>
+    <!-- Section: Social media -->
+  </div>
+  <!-- Grid container -->
+
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    © 2023 Copyright Roomifyr
+  </div>
+  <!-- Copyright -->
+</footer>
+  <!-- End of .container -->
+<!-- End Footer -->
 {{end}}
