UI: changes to fade slides in corousel

--- a/templates/home.page.html
+++ b/templates/home.page.html
@@ -3,7 +3,7 @@
 {{define "content"}}
 
 <!-- Carousel -->
-<div id="carousel-main" class="carousel slide" data-bs-ride="carousel">
+<div id="carousel-main" class="carousel slide carousel-fade" data-bs-ride="carousel">
     
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#carousel-main" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
