UI: added multiple pages and routes

--- a/templates/home.page.html
+++ b/templates/home.page.html
@@ -65,6 +65,9 @@
         </div>
     </div>
   <!--END Description -->
+  <div class="col text-center mb-2">
+    <a href="/make-reservation" class="btn btn-success text-center">Check Availability</a>
+  </div>
 
 {{end}}
 
