--- a/templates/navbar.layout.html
+++ b/templates/navbar.layout.html
@@ -17,7 +17,7 @@
             <a class="nav-link" href="/about">About</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="/rooms" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="/rooms/" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Rooms
             </a>
             <ul class="dropdown-menu">
@@ -26,7 +26,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/make-reservation">Book Now</a>
+            <a class="nav-link" href="/reservation">Book Now</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/contact">Contact</a>
@@ -35,6 +35,9 @@
       </div>
     </div>
   </nav>
+<br>
+<br>
+
 
 {{end}}
 
@@ -45,11 +48,11 @@
 {{define "footer"}}
 <!-- Footer -->
 <!-- Remove the container if you want to extend the Footer to full width. -->
-  <footer class="bg-dark text-center text-white">
+  <footer class="bg-dark text-center text-white fixed-bottom" >
   <!-- Grid container -->
   <div class="container p-2 pb-0">
     <!-- Section: Social media -->
-    <section class="mb-2">
+    <section class="mb-1">
       <!-- Facebook -->
       <a class="btn btn-outline-light btn-floating m-1" href="#" role="button"><i class="fab fa-facebook-f fa-1x"></i></a>
 
@@ -67,7 +70,7 @@
   <!-- Grid container -->
 
   <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+  <div class="text-center p-1" style="background-color: rgba(0, 0, 0, 0.2);">
     © 2023 Copyright Roomifyr
   </div>
   <!-- Copyright -->
