--- a/templates/home.page.html
+++ b/templates/home.page.html
@@ -65,9 +65,13 @@
         </div>
     </div>
   <!--END Description -->
-  <div class="col text-center mb-2">
-    <a href="/make-reservation" class="btn btn-success text-center">Check Availability</a>
+  <div class="col text-center mb-5">
+    <a href="/search-availability" class="btn btn-success text-center">Check Availability</a>
   </div>
+  <br>
+  <br>
+  <br>
+
 
 {{end}}
 
