--- a/templates/navbar.layout.html
+++ b/templates/navbar.layout.html
@@ -2,7 +2,7 @@
 
 {{define "navbar"}}
 
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark" data-bs-theme="dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" data-bs-theme="dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">Roomifyr</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,9 +35,6 @@
       </div>
     </div>
   </nav>
-<br>
-<br>
-
 
 {{end}}
 
