--- a/templates/navbar.layout.html
+++ b/templates/navbar.layout.html
@@ -17,7 +17,7 @@
             <a class="nav-link" href="/about">About</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="/rooms/" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Rooms
             </a>
             <ul class="dropdown-menu">
@@ -26,7 +26,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/reservation">Book Now</a>
+            <a class="nav-link" href="/search-availability">Book Now</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/contact">Contact</a>
@@ -45,7 +45,7 @@
 {{define "footer"}}
 <!-- Footer -->
 <!-- Remove the container if you want to extend the Footer to full width. -->
-  <footer class="bg-dark text-center text-white fixed-bottom" >
+  <footer class="bg-dark text-center text-white absolute" >
   <!-- Grid container -->
   <div class="container p-2 pb-0">
     <!-- Section: Social media -->
