--- a/templates/generals-quarters.page.html
+++ b/templates/generals-quarters.page.html
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="col text-center mb-2">
-          <a href="/make-reservation" class="btn btn-success text-center">Check Availability</a>
+          <a id="check-availability-button" href="#!" class="btn btn-success text-center">Check Availability</a>
         </div>
     </div>
   <!--END Description -->
@@ -35,4 +35,162 @@
 {{define "js"}}
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.1/dist/js/datepicker-full.min.js"></script>
+
+<script src="https://unpkg.com/notie"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script>
+
+// Date range picker
+var attention = prompt()
+
+var button = document.getElementById("check-availability-button").addEventListener("click", function(){
+let html = `
+        <form id="check-availability-form" action="/search-availability" method="post" novalidate class="needs-validation">
+            <div class="form-row">
+                <div class="col">
+                    <div class="row" id="reservation-dates-modal">
+                        <div class="col-md-6">
+                            <input disabled required class="form-control" type="text" name="start" id="start" placeholder="Arrival">
+                        </div>
+                        <div class="col-md-6">
+                            <input disabled required class="form-control" type="text" name="end" id="end" placeholder="Departure">
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </form>
+        `;
+attention.custom({
+    msg: html,
+    title:"Choose your dates",
+
+    willOpen: () => {
+        if (c.willOpen !== undefined){
+            c.willOpen();
+        }
+    },
+    
+    didOpen: () => {
+       if (c.didOpen !== undefined){
+        c.didOpen();
+       }
+    },
+
+    callback: function(result){
+        console.log("called!!");
+
+        let form = document.getElementById("check-availability-form");
+        let formData = new FormData(form);
+        formData.append("csrf_token" , "{{.CSRFToken}}");
+        
+        fetch('/search-availability-json', {method:"POST", body:formData,})
+        .then(response => response.json())
+        .then(data => {
+            console.log(data)
+        } )
+    }})
+
+   
+})
+
+function prompt(){
+    let toast = function(c){
+        const {
+          msg = "",
+          icon = "success",
+          position = "top",
+        } = c;
+        const Toast = Swal.mixin({
+        toast: true,
+        title: msg,
+        position: position,
+        icon: icon,
+        showConfirmButton: false,
+        timer: 3000,
+        timerProgressBar: true,
+        didOpen: (toast) => {
+            toast.addEventListener('mouseenter', Swal.stopTimer)
+            toast.addEventListener('mouseleave', Swal.resumeTimer)
+        }
+        })
+
+        Toast.fire({})
+    }
+
+    let success = function(c){
+        const {
+         msg = "",
+         title = "",
+         footer = "",
+        } = c;
+        Swal.fire({
+            icon: 'success',
+            title: title,
+            text: msg,
+            footer: footer
+            })
+          }
+    
+    let error = function(c){
+        const {
+         msg = "",
+         title = "",
+         footer = "",
+        } = c;
+        Swal.fire({
+            icon: 'error',
+            title: title,
+            text: msg,
+            footer: footer
+            })
+          }
+
+    async function custom(c){
+      const {
+        msg="",
+        title="",
+      } = c;
+
+      const { value: formValues } = await Swal.fire({
+                    title: title,
+                    html: msg,
+                    backdrop: false,
+                    focusConfirm: false,
+                    showCancelButton: true,
+                    willOpen: () => {
+                        const elem = document.getElementById("reservation-dates-modal");
+                        const rp = new DateRangePicker(elem, {
+                            format: 'yyyy-mm-dd',
+                            showOnFocus: true,
+                        })
+                    },
+                    didOpen: () => {
+                    document.getElementById("start").removeAttribute("disabled");
+                    document.getElementById("end").removeAttribute("disabled");
+                    },
+                    preConfirm: () => {
+                        return [
+                        document.getElementById('start').value,
+                        document.getElementById('end').value
+                        ]
+                    }
+})
+
+if (formValues) {
+  Swal.fire(JSON.stringify(formValues))
+}
+    }
+
+    return {
+        toast: toast,
+        success: success,
+        error: error,
+        custom: custom,
+    }
+}
+
+</script>
 {{end}}
